# thrift2pyi

./: .gitignore  CHANGELOG.md  README.md  lint.sh  pyproject.toml  setup.py  tox.ini  unittest.sh
tests/: example.thrift  example_thrift.pyi
tests/a/: a_thrift.pyi  base.thrift  base_thrift.pyi
tests/dest/: example_thrift.pyi
tests/dest/a/: a.thrift
tests/src/: example.thrift  example_thrift.pyi
tests/src/a/: a_thrift.pyi
thrift2pyi/: __init__.py  __main__.py  convert.py  exceptions.py  main.py  peg.py
